feat: Complete Episode Creation Workflow with multi-agent AI system
- Implement comprehensive Episode Multi-Agent Workflow for choose-your-own-adventure episodes
- Add Story Director, Scene Planner, State Agent, and Audio Agents (Music/SFX)
- Integrate ElevenLabs Music and Sound Effects APIs with best practices
- Create Episode Studio UI with AI SDK Elements (reasoning, chain-of-thought)
- Add database schema for episodes, scenes, bibles, and audio storage
- Implement Supabase Storage integration for episode audio files
- Add comprehensive testing framework for multi-agent workflow
- Create API endpoints for episode orchestration with streaming support
- Add personal account navigation and episode creation pages
- Update TypeScript types and database migrations
- Include AI Elements components with official AI SDK patterns

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,16 +9,26 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/openai": "2.0.32",
+    "@ai-sdk/react": "2.0.52",
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "ai": "5.0.48",
     "clsx": "^2.1.1",
     "cmdk": "1.1.1",
     "input-otp": "1.4.2",
     "lucide-react": "^0.544.0",
+    "nanoid": "^5.1.5",
     "radix-ui": "1.4.3",
     "react-dropzone": "^14.3.8",
     "react-top-loading-bar": "3.0.2",
     "recharts": "2.15.3",
+    "streamdown": "^1.3.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
@@ -116,7 +126,13 @@
     "./empty-state": "./src/makerkit/empty-state.tsx",
     "./marketing": "./src/makerkit/marketing/index.tsx",
     "./oauth-provider-logo-image": "./src/makerkit/oauth-provider-logo-image.tsx",
-    "./file-uploader": "./src/makerkit/file-uploader.tsx"
+    "./file-uploader": "./src/makerkit/file-uploader.tsx",
+    "./ai-elements": "./src/components/ai-elements/index.ts",
+    "./ai-elements/prompt-input": "./src/components/ai-elements/prompt-input.tsx",
+    "./ai-elements/reasoning": "./src/components/ai-elements/reasoning.tsx",
+    "./ai-elements/chain-of-thought": "./src/components/ai-elements/chain-of-thought.tsx",
+    "./ai-elements/response": "./src/components/ai-elements/response.tsx",
+    "./ai-elements/episode-studio": "./src/components/ai-elements/episode-studio.tsx"
   },
   "typesVersions": {
     "*": {
