--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,7 +28,10 @@
     "supabase:typegen": "pnpm run supabase:typegen:packages && pnpm run supabase:typegen:app",
     "supabase:typegen:packages": "supabase gen types typescript --local > ../../packages/supabase/src/database.types.ts",
     "supabase:typegen:app": "supabase gen types typescript --local > ./lib/database.types.ts",
-    "supabase:db:dump:local": "supabase db dump --local --data-only"
+    "supabase:db:dump:local": "supabase db dump --local --data-only",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.32",
@@ -74,7 +77,7 @@
     "react-i18next": "^15.7.3",
     "recharts": "2.15.3",
     "tailwind-merge": "^3.3.1",
-    "zod": "^3.25.76"
+    "zod": "^3.25.74"
   },
   "devDependencies": {
     "@kit/eslint-config": "workspace:*",
@@ -82,17 +85,22 @@
     "@kit/tsconfig": "workspace:*",
     "@next/bundle-analyzer": "15.5.3",
     "@tailwindcss/postcss": "^4.1.13",
+    "@testing-library/dom": "^10.0.0",
+    "@testing-library/react": "^16.0.0",
     "@types/node": "^24.5.2",
     "@types/react": "19.1.13",
     "@types/react-dom": "19.1.9",
+    "@vitest/ui": "^2.0.0",
     "babel-plugin-react-compiler": "19.1.0-rc.3",
     "cssnano": "^7.1.1",
+    "jsdom": "^25.0.0",
     "pino-pretty": "13.0.0",
     "prettier": "^3.6.2",
     "supabase": "2.40.7",
     "tailwindcss": "4.1.13",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vitest": "^2.0.0"
   },
   "prettier": "@kit/prettier-config",
   "browserslist": [
